# exec-cmd-for-android-qt

./: CMakeLists.txt  Commands.qml  Main.qml  QTerm.qml  README.md  ScrollablePage.qml  jni_utils.cpp  jni_utils.h  main.cpp  qlog.cpp  qlog.h  qtquickcontrols2.conf
android/: AndroidManifest.xml
android/src/main/java/org/qtproject/example/: QNotification.java  QtAndroidService.java
